Fixed card style that was not centered texts and icon

--- a/public/css/400page2.css
+++ b/public/css/400page2.css
@@ -117,6 +117,13 @@ body {
     width: auto;
 }
 
+.card-header {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+}
 
 /*-------------------------------*/
 /*           Wrappers            */
